fix benefit sorting, add /field/:id/programs
