# api/docs/swagger.json
@@ -1,7 +1,6 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "Это API для продажи олимпгайда за 30 лямов",
         "title": "OlympGuide API",
         "contact": {
             "name": "Support Team",
@@ -794,6 +793,50 @@
                 }
             }
         },
+        "dto.ProgramResponse": {
+            "type": "object",
+            "properties": {
+                "budget_places": {
+                    "type": "integer"
+                },
+                "cost": {
+                    "type": "integer"
+                },
+                "field": {
+                    "type": "string"
+                },
+                "like": {
+                    "type": "boolean"
+                },
+                "link": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "optional_subjects": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "paid_places": {
+                    "type": "integer"
+                },
+                "program_id": {
+                    "type": "integer"
+                },
+                "required_subjects": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "university": {
+                    "$ref": "#/definitions/dto.UniversityForProgramInfo"
+                }
+            }
+        },
         "dto.ProgramShortResponse": {
             "type": "object",
             "properties": {
@@ -829,6 +872,26 @@
                     "items": {
                         "type": "string"
                     }
+                }
+            }
+        },
+        "dto.UniversityForProgramInfo": {
+            "type": "object",
+            "properties": {
+                "logo": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "region": {
+                    "type": "string"
+                },
+                "short_name": {
+                    "type": "string"
+                },
+                "university_id": {
+                    "type": "integer"
                 }
             }
         },
